# exo-skeleton-pose

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: FetchAprilTag.cmake  FetchBoost.cmake  FetchCLI11.cmake  FetchEigen.cmake  FetchFlatBuffers.cmake  FetchMagicEnum.cmake  FetchOrbbecK4A.cmake  FetchSDL3.cmake  FetchSpdlog.cmake  FetchUWebSockets.cmake
dependency/: CMakeLists.txt
dependency/imfilebrowser/: CMakeLists.txt  imfilebrowser.h
dependency/imgui/: CMakeLists.txt
dependency/implot/: CMakeLists.txt
docs/: Coordinates_tagStandard41h12.json  README.md
proto/: README.md  exo_pose_proto.fbs  pose_protocol.fbs
src/: cli_options.cc  cli_options.hh  main.cc
src/core/: ebrcv24g_device_session.hh  math3d.hh
src/dsp/: one_euro_filter.hh
src/gui/: app_base.hh  app_renderer_sdl3.cc  app_renderer_sdl3.hh  debug_gui_app.cc  debug_gui_app.hh  debugger_app.cc  debugger_app.hh  frame_texture.cc  frame_texture.hh  log_console.cc  log_console.hh  plot_buffer.hh
src/hw/: calibration.hh  k4a_frame_source.cc  k4a_frame_source.hh  k4a_frameset.cc  k4a_frameset.hh  sensor_frame.hh  sensor_frame_observer.hh  sensor_frame_provider.cc  sensor_frame_provider.hh  sensor_frame_source.hh  sensor_frameset.hh
src/net/: exo_pose_pipeline.cc  exo_pose_pipeline.hh  exo_pose_server.cc  exo_pose_server.hh  pose_server.cc  pose_server.hh
src/pose/: exo_pose_estimator.cc  exo_pose_estimator.hh  pose_estimator.cc  pose_estimator.hh  rotation_constraint.hh  rotation_filter.hh  tag_detector.cc  tag_detector.hh
webview/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
webview/src/: main.js  pose-client.js  scene.js  skeleton.js
